stream, set, map

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script>
+<!-- <script>
     /* const obj = {}
     const obj2 = Object.create(null)
     // console.log(obj.__proto__)
@@ -21,4 +21,6 @@
     console.log('has name', obj3.hasOwnProperty('name'))
     console.log('has salary', obj3.hasOwnProperty('salary'))
     console.log('has age', Boolean(typeof obj3.age !== 'undefined'))
-</script>
+</script> -->
+
+<script src="./main.js"></script>
